style/index.css
/* animations */

@keyframes appear {
	to {
		opacity: 1.0;
	}
}

/* general */

* {
	font-family: "w_Montserrat", sans-serif;
	font-weight: 300;
	color: #fff;
	box-sizing: border-box;
}

strong, strong * {
	font-weight: 500;
}

:focus {
	outline: 0;
}

a {
	text-decoration: none;
	color: inherit;
}

ul {
	list-style: none;
	margin: 0px;
	padding: 0px;
}

/* main */

body {
	background: #000;
	margin: 0px;
	padding: 0px;
	overflow: hidden;
	position: absolute;
	top: 0;
	left: 0;
	right: 0;
	bottom: 0;
}

body.scrollable {
	overflow: auto;
}

main {
	text-align: center;
	position: absolute;
	top: 0%;
	left: 0;
	right: 0;
	bottom: 0;
	overflow: hidden;
	opacity: 1.0;
	transform: translate3d(0, 0, 0);
	transition: opacity 1s, top 1s;
	z-index: 1000;
}

main.hidden {
	z-index: -1000;
	opacity: 0.0;
	top: -100%;
}

main>nav {
	position: absolute;
	left: 0;
	right: 0;
	bottom: 38%;
	transform: translate(0%, 50%);
}

main>nav>ul {
	display: flex;
	flex-direction: row;
	max-width: 800px;
	margin: auto;
}

main>nav>ul>li {
	font-size: 1.5em;
	display: inline-block;
	width: 100%;
	padding: 0;
	border: 0;
}

main>nav>ul>li>a {
	opacity: 0.0;
	position: relative;
	padding: 4px;
	color: #777;
	transition: color 0.1s;
}

main>nav>ul>li>a:hover, main>nav>ul>li>a:focus {
	color: #fff;
}

main>nav>ul>li>a:after {
	content: '';
	background: #fff;
	display: inline-block;
	width: 0%;
	height: 1px;
	position: absolute;
	left: 50%;
	bottom: -4px;
	transition: left 0.1s, width 0.1s;
}

main>nav>ul>li>a:hover:after, main>nav>ul>li>a:focus:after {
	width: 100%;
	left: 0%;
}

main.animating>nav>ul>li>a#about_btn {
	animation: appear 0.5s ease 3.5s forwards;
}

main.animating>nav>ul>li>a#projects_btn {
	animation: appear 0.5s ease 4s forwards;
}

main.animating>nav>ul>li>a#discord_btn {
	animation: appear 0.5s ease 4.5s forwards;
}

#content {
	padding-bottom: 32px;
	opacity: 0.0;
	text-align: center;
	transition: opacity 0.5s;
}

#content.active {
	opacity: 1.0;
}

#content #banner-svg {
	width: 100vw;
	margin: 8px 0px;
	transform: translate(0%, -100%);
	transition: transform 0.5s;
}

#content.active #banner-svg {
	transform: translate(0%, 0%);
}

#content #container {
	margin: auto;
	padding: 0px 16px;
}

